--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
     crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="image.css">
+  <link rel="stylesheet" href="temp.css">
   <title>Theme</title>
 </head>
 
@@ -186,6 +188,122 @@
           <div class="media-body">
             <h5>FUlly Responsive</h5>
             <p>Theme has 100% responsive design and tested on all major devices.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="demo-feature">
+    <div class="container-fluid d-flex" style="background-color: #FFFFFF; margin:30px 0;">
+      <div class="col-md-6">
+        <div class="title" style=" margin:15px 0">
+          <h5>VISUAL COMPOSER</h5>
+          <p>WPBakery Page Builder (formerly Visual Composer) is the #1 Best Selling drag and drop frontend and backend
+            page builder plugin on the market – already powering 2,000,000+ websites. Comes with 50+ built-in content
+            elements and 17+ custom elements</p>
+          <div class="row">
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+            <div class="col-md-4 vc-icon">Textblock</div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <img src="./images/vc-elements.png" style="max-width: 100%;" alt="">
+      </div>
+    </div>
+  </div>
+  <div class="demo-feature">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://picsum.photos/728/400" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://picsum.photos/728/400" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://picsum.photos/728/400" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-md-4 col-gap-left">
+          <div class="title text-center" >
+            <h4>COMPLETE BOOKING SYSTEM</h4>
+            <p>Complete & easy to use booking system with everything you need to manage your hotel & resort. Eagle Booking plugin comes with a lot of features like:</p>
+          </div>
+          <div class="row ml-3">
+            <div class="col-md-6 d-flex">
+              <i class="fa fa-cc-paypal" aria-hidden="true"></i>
+              <p>Paypal</p>
+            </div>
+            <div class="col-md-6 d-flex">
+              <i class="fa fa-plus" aria-hidden="true"></i>
+              <p>Additional Services</p>
+            </div>
+            <div class="col-md-6 d-flex">
+              <i class="fa fa-credit-card" aria-hidden="true"></i>
+              <p>Cred Card</p>
+            </div>
+            
+            <div class="col-md-6 d-flex">
+              <i class="fas fa-piggy-bank    "></i>
+              <p>Bank Tranfer</p>
+            </div>
+            <div class="col-md-6 d-flex">
+              <i class="fas fa-mail-bulk    "></i>
+              <p>Email Template</p>
+            </div>
+            <div class="col-md-6 d-flex">
+              <i class="fa fa-calendar" aria-hidden="true"></i>
+              <p>Blocked Dates</p>
+
+            </div>
+            <div class="col-md-6 d-flex">
+              <i class="fas fa-money-check    "></i>
+              <p>Payment on Arrive</p>
+            </div>
+            <div class="col-md-6 d-flex">
+              <i class="fa fa-sun-o" aria-hidden="true"></i>
+              <p>Seasonal Pricing</p>
+            </div>
+            <div class="col-md-6 d-flex">
+              <i class="fas fa-money-bill    "></i>
+              <p>Coupon Code</p>
+            </div>
+            <div class="col-md-6 d-flex">
+              <i class="fa fa-calendar" aria-hidden="true"></i>
+              <p>Booking request</p>
+            </div>
           </div>
         </div>
       </div>
