--- a/index.html
+++ b/index.html
@@ -309,7 +309,135 @@
       </div>
     </div>
   </div>
-
+  <div class="rated">
+    <div class="container-fluid">
+      <div class="row mt-4 mb-4 justify-content-center">
+        <div class="col-sm-5 text-center">
+          <div class="review-item fa-border">
+            <div class="review-header">
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <strong>Design</strong>
+            </div>
+            <div class="review-main">
+              I like this theme. Its clean, easy to use and creates a room for more features and updates in future.
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-5 text-center">
+          <div class="review-item fa-border">
+            <div class="review-header">
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <strong>Design</strong>
+            </div>
+            <div class="review-main">
+              I like this theme. Its clean, easy to use and creates a room for more features and updates in future.
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-5 text-center">
+          <div class="review-item fa-border">
+            <div class="review-header">
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <strong>Design</strong>
+            </div>
+            <div class="review-main">
+              I like this theme. Its clean, easy to use and creates a room for more features and updates in future.
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-5 text-center">
+          <div class="review-item fa-border">
+            <div class="review-header">
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <strong>Design</strong>
+            </div>
+            <div class="review-main">
+              I like this theme. Its clean, easy to use and creates a room for more features and updates in future.
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-5 text-center">
+          <div class="review-item fa-border">
+            <div class="review-header">
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <strong>Design</strong>
+            </div>
+            <div class="review-main">
+              I like this theme. Its clean, easy to use and creates a room for more features and updates in future.
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-5 text-center">
+          <div class="review-item fa-border">
+            <div class="review-header">
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <strong>Design</strong>
+            </div>
+            <div class="review-main">
+              I like this theme. Its clean, easy to use and creates a room for more features and updates in future.
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-5 text-center">
+          <div class="review-item fa-border">
+            <div class="review-header">
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <strong>Design</strong>
+            </div>
+            <div class="review-main">
+              I like this theme. Its clean, easy to use and creates a room for more features and updates in future.
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-5 text-center">
+          <div class="review-item fa-border">
+            <div class="review-header">
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <i class="fa fa-star" style="color: yellowgreen" aria-hidden="true"></i>
+              <strong>Design</strong>
+            </div>
+            <div class="review-main">
+              I like this theme. Its clean, easy to use and creates a room for more features and updates in future.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="text-center">
+    <div class="container"></div>
+  </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
