--- a/index.html
+++ b/index.html
@@ -436,7 +436,22 @@
     </div>
   </div>
   <div class="text-center">
-    <div class="container"></div>
+    <div class="container">
+      <h3>Build your amazing hotel website today!
+      </h3>
+      <p>Packed with a lot of features, easy to use and great support.
+      </p>
+      <a href="https://themeforest.net/cart/add_items?ref=eagle-themes&item_ids=22325268">Purchase Hotel Zante Now</a>
+      <ul class="social-list d-flex justify-content-between">
+        <li>
+          <a href="https://google.com.vn">
+            <i class="fab fa-youtube    ">Youtube</i>
+          </a>
+        </li>
+        <li><a href="https://google.com.vn"><i class="fab fa-instagram" >Instagram</i></a></li>
+        <li><a href="https://google.com.vn"><i class="fab fa-facebook    ">Facebook</i></a></li>
+      </ul>
+    </div>
   </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
