--- a/index.html
+++ b/index.html
@@ -445,7 +445,9 @@
       <ul class="social-list d-flex justify-content-between">
         <li>
           <a href="https://google.com.vn">
-            <i class="fab fa-youtube    ">Youtube</i>
+            <i class="fab fa-youtube    ">This is my youtube channel</i>
+            
+
           </a>
         </li>
         <li><a href="https://google.com.vn"><i class="fab fa-instagram" >Instagram</i></a></li>
